I fixed the delete button functionality and added some css styles to the buttons.

--- a/src/Components/ProcessList/ProcessList.css
+++ b/src/Components/ProcessList/ProcessList.css
@@ -16,3 +16,10 @@ input[type=text]:hover {
     border-color: lightblue;
     
 }
+
+.btn-style {
+    border-radius: 7px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 600;
+    background-color: 	rgba(128, 255, 0, .50);
+}
