--- a/src/Components/YourList/YourList.css
+++ b/src/Components/YourList/YourList.css
@@ -1,3 +1,7 @@
+.body-style {
+    background-color: 	rgb(242, 242, 242);
+}
+
 .btn-delete {
     margin-left: 10px;
     background-color: rgba(255, 0, 0, .50);
