--- a/src/Components/YourList/YourList.css
+++ b/src/Components/YourList/YourList.css
@@ -1,8 +1,16 @@
 .body-style {
-    background-color: 	rgb(242, 242, 242);
+    background-color: 	rgb(248, 248, 248);
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .btn-delete {
     margin-left: 10px;
     background-color: rgba(255, 0, 0, .50);
+    font-size: 12px;
+}
+
+.list-style {
+    line-height: 1.5;
+    font-size: larger;
 }
