I made some style changes to the form field. The input fields are now lined up.

--- a/src/Components/ProcessList/ProcessList.css
+++ b/src/Components/ProcessList/ProcessList.css
@@ -1,12 +1,9 @@
 .form-item {
-    display: flex;
     margin: 15px;
-    align-items: flex-start;
+    text-align: left;
 }
 
-.text-field {
-    margin-left: 10px;
-}
+
 
 label {
     cursor: pointer;
