--- a/src/Components/YourList/YourList.css
+++ b/src/Components/YourList/YourList.css
@@ -1,7 +1,6 @@
 .body-style {
     background-color: 	rgb(248, 248, 248);
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px 40px;
 }
 
 .btn-delete {
